# RustyGodot

./: .gitignore  Lab_2_Entrées réseau & mesure de laten.md
game/: Player.tscn  project.godot
game/resources/: input_config.tres
game/scenes/: game.tscn
game/scripts/: input_mapping.gd  input_mapping.gd.uid  player.gd  player.gd.uid  test_network.gd  test_network.gd.uid
rust/src/game/: Cargo.toml
rust/src/game/src/: lib.rs
rust/src/server/: Cargo.toml
rust/src/server/src/: main.rs  protocol.rs
rust/xtask/src/: main.rs
