[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }
snl = { git = "https://github.com/VALERE91/snl.git" }
bevy = "0.18"
bincode = "1.3"
tracing = "0.1.44"